# neural_network_assignment

./: .gitignore  README.md  main.py  neural_network_assignment_report.docx  pyproject.toml
neural_network/: __init__.py  activation_layers.py  categorical_cross_entropy.py  data_preproc.py  evaluate_model.py  functions.py  linear_layer.py  linear_model.py  optimizers.py  train_network.py
nueral_network/: __init__.py  activation_layers.py  functions.py  linear_layer.py  linear_model.py
tests/test_activation_layers/: test_log_softmax.py  test_relu.py  test_softmax.py
tests/test_categorical_cross_entropy/: test_categorical_cross_entropy.py
tests/test_data_preproc/: test_data_preproc.py
tests/test_functions/: test_cross_entropy_loss.py  test_flatten.py  test_onehot.py
tests/test_linear_layer/: test_linear_layer.py  test_linear_layer_backward.py
tests/test_linear_model/: test_example_linear_model.py  test_model_training.py
tests/test_optimizers/: test_adam.py  test_adam_2.py
